--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,24 @@
       {
         "src": "server.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "public/**/*",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
+        "src": "/socket.io",
+        "dest": "/server.js"
+      },
+      {
+        "src": "/socket.io/(.*)",
+        "dest": "/server.js"
+      },
+      {
         "src": "/(.*)",
-        "dest": "server.js"
+        "dest": "/server.js"
       }
     ]
   }
